tests/NormalTests/paczka1/fuzzy1/13492191.err
Error in line 2: MqBA38flg A33H 40,7
Error in line 4: ezF4iFQn A331 59,1
Error in line 11: P8Ff A331 71,7
Error in line 27: 2YEJXW A555 26,68
Error in line 25: b6fU A331 8,3
Error in line 38: b6fU A697 60,0
